--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "19.2.3",
     "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.1",
+    "three": "^0.134.0",
+    "vanta": "^0.5.24",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
+    "@types/three": "^0.183.0",
     "eslint": "^9.39.2",
     "eslint-config-next": "^0.2.4",
     "tailwindcss": "^4",
